--- a/steam.ipynb
+++ b/steam.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a104f633",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "34ae5ad0",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
        "4  151603712                       Spore      play   14.9  0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "05be89c7",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "9c6e2d59",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
        "max    3.099031e+08   11754.000000       0.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,11 +316,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "dd06d5e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 199999 entries, 0 to 199998\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column                      Non-Null Count   Dtype  \n",
+      "---  ------                      --------------   -----  \n",
+      " 0   151603712                   199999 non-null  int64  \n",
+      " 1   The Elder Scrolls V Skyrim  199999 non-null  object \n",
+      " 2   purchase                    199999 non-null  object \n",
+      " 3   1.0                         199999 non-null  float64\n",
+      " 4   0                           199999 non-null  int64  \n",
+      "dtypes: float64(1), int64(2), object(2)\n",
+      "memory usage: 7.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "0d7e6fc8",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "151603712                     0\n",
+       "The Elder Scrolls V Skyrim    0\n",
+       "purchase                      0\n",
+       "1.0                           0\n",
+       "0                             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Are there any missing values?\n",
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "cf2d0abb",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.drop(['0'],axis = 1,inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bae15c57",
+   "metadata": {},
+   "source": [
+    "### Exploratory Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06caa1a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['purchase'].unique()\n",
+    "df['purchase'].value_counts()\n",
+    "sns.countplot(x=\"purchase\", data=df_)\n",
+    "df_train['purchase'].value_counts().plot(kind='pie',autopct='%1.1f%%')"
+   ]
   }
  ],
  "metadata": {
